Add virtual keyboard offset to tray bubble sliders for volume/brightness

If you adjust the volume while the virtual keyboard is loaded, the
slider will be hidden underneath the keyboard.

Bug: 836155
Change-Id: Ia4f4c116906f80058772decc8420c8021f463aa6
Reviewed-on: https://chromium-review.googlesource.com/1096585
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Stefan Kuhne <skuhne@chromium.org>
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Reviewed-by: Yuichiro Hanada <yhanada@chromium.org>
Commit-Queue: Blake O'Hare <blakeo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567923}